--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 		<div class="left-side">
 			<div class="profileText">
 				<div class="imgBx">
-					<img src="./Profile.jpeg" alt="" />
-				</div>
-				<h2>Alok Kumar Mishra<br><span>Foolish Fellow</span></h2>
+						</div>
+				<h2>Alok Kumar Mishra<br><span>Techinal Support Engineer II</span></h2>
 			</div>
 			<!-- left-contact information -->
 			<div class="contact-info">
@@ -28,15 +27,11 @@
 					</li>
 					<li>
 						<span class="icon"><i class="fa fa-envelope"></i></span>
-						<span class="text">email</span>
+						<span class="text">getakmishra007@gmail.com</span>
 					</li>
 					<li>
 						<span class="icon"><i class="fa-brands fa-linkedin-in"></i></span>
-						<span class="text">linkedin</span>
-					</li>
-					<li>
-						<span class="icon"><i class="fa-brands fa-github"></i></span>
-						<span class="text">github</span>
+						<span class="text">https://www.linkedin.com/in/alok-mishra-0031221a4</span>
 					</li>
 					<li>
 						<span class="icon"><i class="fa-solid fa-location-dot"></i></span>
@@ -50,20 +45,15 @@
 				<ul>
 					<li>
 						<h5>2019-present</h5>
-						<h4>Masters in xyz universut</h4>
-						<h5>university bits pilani</h5>
+						<h4>Masters in Computer Science</h4>
+						<h5>BITS PILANI</h5>
 					</li>
 					<li>
 						<h5>2016-2019</h5>
-						<h4>bachelors in xyz universut</h4>
-						<h5>university</h5>
+						<h4>Bachelors in Computer Aplication</h4>
+						<h5>Gossner College</h5>
 					</li>
-					<li>
-						<h5>2014-2016</h5>
-						<h4>college in xyz universut</h4>
-						<h5>university</h5>
-					</li>
-				</ul>
+						</ul>
 			</div>
 			<!-- languages -->
 			<div class="contact-info language">
@@ -79,21 +69,22 @@
 		<div class="right-side">
 			<div class="about">
 				<h2 class="title2">Profile</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur veritatis labore tempore accusamus iste! Nulla officiis totam quo cupiditate magnam magni eius qui sed est, enim excepturi, quia dignissimos sequi?</p>
+				<p>Personable and knowledgeable IT support technician with over 2.5 years of experience assisting customers with various software related issues. Provided in-depth technical support to clients at a Tier 2 level, solving 99.2% of issues without transferring to Tier 3 support.</p>
 			</div>
 			<div class="about experience">
 				<h2 class="title2">Experience</h2>
 					<div class="box">
 						<div class="year_company">
-							<h5>Company Name abc (2019-present)</h5>
+							<h5>Wipro Technologies (2019-present)</h5>
 						</div>
 						<div class="text">
-							<h4>Senior Engineer</h4>
+							<h4>Technical Support Engineeer II</h4>
 							
 							<ul>
-								<li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora distinctio doloremque voluptas vitae, natus necessitatibus itaque commodi dolores, nobis sit ipsam, veniam doloribus! Nisi sed, dolores ipsam at ullam repellendus.</li>
-								<li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora distinctio doloremque voluptas vitae, natus necessitatibus itaque commodi dolores, nobis sit ipsam, veniam doloribus! Nisi sed, dolores ipsam at ullam repellendus.</li>
-								<li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora distinctio doloremque voluptas vitae, natus necessitatibus itaque commodi dolores, nobis sit ipsam, veniam doloribus! Nisi sed, dolores ipsam at ullam repellendus.</li>
+								<li>Provided knowledge shares/coaching to other technical support engineers on new hardware and software feature package releases.</li>
+								<li>Owned customer, carrier and corporate connections including standard VPN, AnyConnect and direct connects.</li>
+								<li>Write SQL scripts to add, delete, and modify objects in the OMC-R MIB database to fix field issues.</li>
+                <li>Lead two teams of information technology and providing help to customers satisfaction.</li>
 							</ul>
 						</div>
 					</div>
@@ -102,23 +93,25 @@
 				<h2 class="title2">Professional Skills</h2>
 				<div class="box">
 					<ul>
-						<li>Stupidity</li>
-						<li>too tall like a girraffe</li>
-						<li>0 girlfriends</li>
-						<li>1 very awesome bestie</li>
-						<li>Stupidity</li>
-						<li>Stupidity</li>
+						<li>DELL EMC SourceOne</li>
+						<li>MS Exchange On-Premise</li>
+						<li>Active Directory</li>
+						<li>MS Windows Administrator</li>
+						<li>IIS</li>
+						<li>Networking</li>
+            <li>MS SQL</li>
+            <li>MS Office Suite</li>
+            <li>Networker</li>
 					</ul>
 				</div>
 			</div>
 			<div class="about interest">
 				<h2 class="title2">Interests</h2>
 					<ul>
-						<li>free food</li>
-						<li>machli ghar</li>
-						<li>free food</li>
-						<li>machli ghar</li>
-					</ul>
+						<li>Cricket</li>
+						<li>Badminton</li>
+            <li>Watching Movies</li>
+										</ul>
 			</div>
 			
 		</div>
