--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="profileText">
 				<div class="imgBx">
 						</div>
-				<h2>Alok Kumar Mishra<br><span>Techinal Support Engineer II</span></h2>
+				<h2>Alok Kumar Mishra<br><span>Technical Support Engineer II</span></h2>
 			</div>
 			<!-- left-contact information -->
 			<div class="contact-info">
