--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<div class="left-side">
 			<div class="profileText">
 				<div class="imgBx">
+					<img src="./Profile.jpeg" alt="" />
 						</div>
 				<h2>Alok Kumar Mishra<br><span>Technical Support Engineer II</span></h2>
 			</div>
